--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url("../images/background.jpg");
+    background-image: url("../images/joe-woods-4Zaq5xY5M_c-unsplash.jpg");
     background-color: #fff;
     background-position: bottom left;
     background-repeat: no-repeat;
