--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url("../images/alessio-soggetti-cfKC0UOZHJo-unsplash.jpg");
+    background-image: url("https://images.unsplash.com/photo-1528731708534-816fe59f90cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
     background-color: #fff;
     background-position: bottom left;
     background-repeat: no-repeat;
