--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,11 @@ a:hover {
     margin-top: 65px;
     margin-left: auto;
     margin-right: auto;
+    background-color: #e4dece;
+    padding: 50px;
+    /* -webkit-box-shadow: 0 10px 6px -6px #777; */
+    -moz-box-shadow: 0 10px 6px -6px #777;
+    box-shadow: 0 10px 6px -6px #777;
 }
 #container p a {
     font-weight: bold;
@@ -68,5 +73,7 @@ a:hover {
     margin-left: 25px;
     min-width: 290px;
     max-width: 290px;
+    padding: 0;
+    background-color:inherit;
   }
 }
