--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ a:hover {
     height: 100vh;
     margin-left: auto;
     margin-right: auto;
-    background-color: #e4dece;
+    background-color: #f1f2f0d1;
     padding: 50px;
     box-shadow: 12px 0 15px -4px rgb(132 132 132 / 80%), -12px 0 8px -4px rgb(130 130 130 / 80%);
 }
