--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,6 @@ a:hover {
     background-position: 10% 0;
     background-color: #fff;
     background-attachment: scroll;
-    background-image: inherit;
   }
   h1 {
     font-size: 40px;
@@ -72,8 +71,7 @@ a:hover {
     margin-left: 25px;
     min-width: 290px;
     max-width: 290px;
-    padding: 0;
+    padding: 20px;
     box-shadow: inherit;
-    background-color: inherit;
   }
 }
