--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ a:hover {
     min-width: 290px;
     max-width: 450px;
     overflow: visible;
+    margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
     background-color: #f1f2f0d1;
@@ -63,6 +64,6 @@ a:hover {
     color: #fff;
   }
   #container {
-
+margin-top:0;
   }
 }
