--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,10 @@ a:hover {
 #container p a {
     font-weight: bold;
 }
+#footer{
+    text-align:center;
+    margin-top:40px;
+}
 @media only screen and (max-width: 600px), (max-height: 600px) {
   html {
   }
