--- a/css/styles.css
+++ b/css/styles.css
@@ -49,8 +49,17 @@ a:hover {
     font-weight: bold;
 }
 #footer{
-    text-align:center;
-    margin-top:40px;
+    width: 30%;
+    min-width: 290px;
+    max-width: 450px;
+    overflow: visible;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+#footer p{
+}
+#footer a{
 }
 @media only screen and (max-width: 600px), (max-height: 600px) {
   html {
