--- a/css/skins/red.css
+++ b/css/skins/red.css
@@ -1,4 +1,5 @@
 html {
+    /* Source of the background photo: https://unsplash.com/photos/vBeFP0c3thg */
     background-image: url("https://images.unsplash.com/photo-1532710715032-d1a977febd7a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=689&q=80");
 }
 a {
