--- a/css/primary.css
+++ b/css/primary.css
@@ -1,5 +1,5 @@
 html {
-    background-color: #fff;
+    background-color: #d6d6d6;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
