--- a/css/skins/rain.css
+++ b/css/skins/rain.css
@@ -1,21 +1,11 @@
 html {
-    /* Source of the background photo: https://unsplash.com/photos/wVjd0eWNqI8 */
-    background-image: url("html {
-    /* Source of the background photo: https://unsplash.com/photos/wVjd0eWNqI8 */
-    background-image: url("https://images.unsplash.com/photo-1483354483454-4cd359948304?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+    /* Source of the background photo: https://unsplash.com/photos/vBeFP0c3thg */
+    background-image: url("https://images.unsplash.com/19/drops.JPG?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1377&q=80");
 }
 a {
     color: #a57518;
 }
 a:hover {
-    color: #297ea6;
-    border-bottom: 1px solid #297ea6;
-}");
-}
-a {
-    color: #3b6f92;
-}
-a:hover {
-    color: #297ea6;
-    border-bottom: 1px solid #297ea6;
+    color: #ca8b10;
+    border-bottom: 1px solid #ca8b10;
 }
